--- a/templates/register.html
+++ b/templates/register.html
@@ -23,14 +23,14 @@
         </div>
     </div>
     <p id="slogan">Ditt bidrag, vår säkerhet</p>
-    
+
     <!--NavBar-->
     <nav class="navbar">
         <ul>
             <li><a href="/">Hem</a></li>
             <li><a href="/Krishantering">Krishantering</a></li>
             <li><a href="/Kontakt">Kontakta oss</a></li>
-            
+
             <li><a href="/Logga_in" id="loginbtn">Logga in</a></li>
             <li><a href="/Registrering" id="regbtn">Gå med</a></li>
         </ul>
@@ -41,15 +41,15 @@
     <div class="container-md">
         <div class="row">
             <main class="col-12 col-md-9 mx-auto">
-                    <div class="leftside">
-                        <h3 class="">Registrera dig här!</h1>
+                <div class="leftside">
+                    <h3 class="">Registrera dig här!</h1>
                         <p>Som registrerad användare kan du:</p>
                         <ul>
                             <li>Publicera inlägg</li>
                             <li>Bekräfta andra användares inlägg</li>
                             <li>Få mejlnotiser vid krissituation i ditt område</li>
                         </ul>
-                    </div>
+                </div>
 
                 <!--Alert when registration succeed-->
                 {%if created == True: %}
@@ -57,16 +57,16 @@
                     <h4 class="alert-heading">Sådärja!</h4>
                     <p>Nu är ditt konto skapat</p>
                     <a href="/Logga_in" class="btn btn-dark">Logga in</a>
-                </div>  
+                </div>
                 {% endif %}
 
                 <!--Form shown when registration is not done-->
                 {%if created == False: %}
                 <div class="rightside">
-                <form action="/Registrering" method="POST" class="pb-5" accept-charset="UTF-8">
-                    <label for="email" class="form-label h7">
-                        Mejladress
-                    </label><br>
+                    <form action="/Registrering" method="POST" class="pb-5" accept-charset="UTF-8">
+                        <label for="email" class="form-label h7">
+                            Mejladress
+                        </label><br>
 
                         <div class="input-group">
                             <span class="input-group-text">
@@ -76,33 +76,36 @@
                                         d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z" />
                                 </svg>
                             </span>
-                            <input class="form-control" type="email" id="email" name="email" placeholder="Din mejladress..."
-                    value={{email}}>
+                            <input class="form-control" type="email" id="email" name="email"
+                                placeholder="Din mejladress..." value={{email}}>
                         </div>
-                    <p class="feedback_message_register"><small>{{no_email_feedback}}</small></p>
+                        <p class="feedback_message_register"><small>{{no_email_feedback}}</small></p>
 
-                    <label for="birthday" class="mt-3 h6">Födelsedatum</label>
-                    <input class="form-control" type="date" id="birthday" name="birthday" value={{birthday}}>
-                    <p class="feedback_message_register"><small>{{no_birthday_feedback}}</small></p>
-                    <p class="feedback_message_register"><small>{{age_feedback}}</small></p>
+                        <label for="birthday" class="mt-3 h6">Födelsedatum</label>
+                        <input class="form-control" type="date" id="birthday" name="birthday" value={{birthday}}>
+                        <p class="feedback_message_register"><small>{{no_birthday_feedback}}</small></p>
+                        <p class="feedback_message_register"><small>{{age_feedback}}</small></p>
 
-                    <label for="postnummer" class="mt-3 h6">Postnummer</label>
-                    <input class="form-control" type="text" id="postnummer" name="postnummer" placeholder="Behöver ej uppges">
-                    
-                    <label for="pwd" class="mt-3 h6">Lösenord</label>
-                    <input class="form-control" type="password" id="pwd" name="pwd">
-                    <p class="feedback_message_register"><small>{{no_pwd_feedback}}</small></p>
-                    <p class="feedback_message_register"><small>{{pwd_feedback}}</small></p>
-                    <input class="mt-2" type="checkbox" onclick="togglePassword()"> Visa lösenord
-                    <br>
-                    <input class="mt-2" type="checkbox"> Jag intygar att jag är över 16 år.
-                    <br>
-                    <br>
-                    <p>Genom att registrera dig bekräftar du att du har läst och accepterar våra <b>användarvillkor</b> och <b>sekretesspolicy</b>, vilket inkluderar användningen av cookies för att förbättra din användarupplevelse.</p> <!--Genererat av AI-->
-                    
-                    <div>
-                        <button type="submit" id="regButton" class="logoutbtn">Registrera mig</button>
-                    </div>              
+                        <label for="postnummer" class="mt-3 h6">Postnummer</label>
+                        <input class="form-control" type="text" id="postnummer" name="postnummer"
+                            placeholder="Behöver ej uppges">
+
+                        <label for="pwd" class="mt-3 h6">Lösenord</label>
+                        <input class="form-control" type="password" id="pwd" name="pwd">
+                        <p class="feedback_message_register"><small>{{no_pwd_feedback}}</small></p>
+                        <p class="feedback_message_register"><small>{{pwd_feedback}}</small></p>
+                        <input class="mt-2" type="checkbox" onclick="togglePassword()"> Visa lösenord
+                        <br>
+                        <input class="mt-2" type="checkbox"> Jag intygar att jag är över 16 år.
+                        <br>
+                        <br>
+                        <p>Genom att registrera dig bekräftar du att du har läst och accepterar våra
+                            <b>användarvillkor</b> och <b>sekretesspolicy</b>, vilket inkluderar användningen av cookies
+                            för att förbättra din användarupplevelse.</p> <!--Genererat av AI-->
+
+                        <div>
+                            <button type="submit" id="regButton" class="logoutbtn">Registrera mig</button>
+                        </div>
 
                 </div>
                 </form>
@@ -112,44 +115,44 @@
     </div>
 
 
-<!--Footer-->
-<footer>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col">
-                <div class="logo-container">
-                    <p id="logohead">K</p>
-                    <div class="logobody-wrapper">
-                        <p class="logobody">RIS</p>
-                        <p class="logobody2">OLL</p>
+    <!--Footer-->
+    <footer>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col">
+                    <div class="logo-container">
+                        <p id="logohead">K</p>
+                        <div class="logobody-wrapper">
+                            <p class="logobody">RIS</p>
+                            <p class="logobody2">OLL</p>
+                        </div>
                     </div>
                 </div>
-            </div>
 
-        <div class="col">
-                <p class="fhead">Följ oss</p>
-                <p class="ftext">Facebook</p>
-                <p class="ftext">Instagram</p>
-                <p class="ftext">Youtube</p>
+                <div class="col">
+                    <p class="fhead">Följ oss</p>
+                    <p class="ftext">Facebook</p>
+                    <p class="ftext">Instagram</p>
+                    <p class="ftext">Youtube</p>
+                </div>
+
+                <div class="col">
+                    <p class="fhead">Juridiskt</p>
+                    <p class="ftext">Integritetspolicy</p>
+                    <p class="ftext">Cookiepolicy</p>
+                    <p class="ftext">Sekretessinställningar</p>
+                </div>
+
+                <div class="col">
+                    <p class="fhead">Om KrisKoll</p>
+                    <p class="ftext">Om oss</p>
+                    <p class="ftext">Kontakta oss</p>
+                    <p class="ftext">Hållbarhet</p>
+                </div>
             </div>
-        
-            <div class="col">
-                <p class="fhead">Juridiskt</p>
-                <p class="ftext">Integritetspolicy</p>
-                <p class="ftext">Cookiepolicy</p>
-                <p class="ftext">Sekretessinställningar</p>
-            </div>
-        
-            <div class="col">
-                <p class="fhead">Om KrisKoll</p>
-                <p class="ftext">Om oss</p>
-                <p class="ftext">Kontakta oss</p>
-                <p class="ftext">Hållbarhet</p>
-            </div>
-    </div>
-        <hr>
-        <p id="copy">© 2024 KrisKoll</p>
-</footer>
+            <hr>
+            <p id="copy">© 2024 KrisKoll</p>
+    </footer>
 
 
     <!--BootstrapJS-->
