--- a/templates/polisen_api.html
+++ b/templates/polisen_api.html
@@ -23,19 +23,19 @@
         </div>
     </div>
     <p id="slogan">Ditt bidrag, vår säkerhet</p>
-    
+
     <!--NavBar-->
     <nav class="navbar">
         <ul>
             <li><a href="/">Hem</a></li>
             <li><a href="/Krishantering">Krishantering</a></li>
             <li><a href="/Kontakt">Kontakta oss</a></li>
-            
+
             <!--Inloggad användare-->
             {% if is_logged_in != None %}
             <li><a href="/Ny">Publicera inlägg</a></li>
             <li><a href="/Profil" id="profilebtn">Min profil</a></li>
-    
+
             <!--Inte inloggad användare-->
             {% else %}
             <li><a href="/Logga_in" id="loginbtn">Logga in</a></li>
@@ -137,7 +137,7 @@
                                     // Om switchen är ikryssad (checked), omdirigera användaren till den angivna sidan
                                     if (switchPolice.checked) {
                                         window.location.href = "/Händelser_från_polisen";
-                                    } else{
+                                    } else {
                                         window.location.href = "/"
                                     }
                                 }
@@ -197,27 +197,27 @@
                 </div>
             </div>
 
-        <div class="col">
+            <div class="col">
                 <p class="fhead">Följ oss</p>
                 <p class="ftext">Facebook</p>
                 <p class="ftext">Instagram</p>
                 <p class="ftext">Youtube</p>
             </div>
-        
+
             <div class="col">
                 <p class="fhead">Juridiskt</p>
                 <p class="ftext">Integritetspolicy</p>
                 <p class="ftext">Cookiepolicy</p>
                 <p class="ftext">Sekretessinställningar</p>
             </div>
-        
+
             <div class="col">
                 <p class="fhead">Om KrisKoll</p>
                 <p class="ftext">Om oss</p>
                 <p class="ftext">Kontakta oss</p>
                 <p class="ftext">Hållbarhet</p>
             </div>
-    </div>
+        </div>
         <hr>
         <p id="copy">© 2024 KrisKoll</p>
 </footer>
@@ -225,8 +225,7 @@
 
 <!--BootstrapJS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous">
-</script>
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+    </script>
 
 </html>
