--- a/templates/chrisis_tips.html
+++ b/templates/chrisis_tips.html
@@ -46,20 +46,20 @@
 
   <div class="container">
     <div class="row">
-      <div class="col-md-6">
-        <div class="card">
-          <div class="card-body">
-            <h2>MSB</h2>
-            <p>Myndigheten för samhällsskydd och beredskap är en svensk statlig
-              förvaltningsmyndighet, som sorterar under försvarsdepartementet och tillhör ministern för
-              civilt försvars ansvarsområde.<br>
-              <span style="color: red;">Vid en större olycka eller en kris behöver du få veta vad som
-                händer, hur du själv ska agera och vad ansvariga myndigheter gör. Du kan också behöva
-                komma i kontakt med dina anhöriga.</span>
-              <a href="https://www.msb.se" class="btn btn-dark">Läs mer</a>
-            </p>
-            <img src="static/msb.webp" class="img-fluid" alt="Placeholder Image">
-          </div>
+      <div class="card col-md-6 ">
+        <div class="card-body">
+          <h2>MSB</h2>
+          <p>Myndigheten för samhällsskydd och beredskap är en svensk statlig
+            förvaltningsmyndighet, som sorterar under försvarsdepartementet och tillhör ministern för
+            civilt försvars ansvarsområde.<br><br>
+            <span style="color: red;">Vid en större olycka eller en kris behöver du få veta vad som
+              händer, hur du själv ska agera och vad ansvariga myndigheter gör. Du kan också behöva
+              komma i kontakt med dina anhöriga.</span>
+            <br>
+            <a href="https://www.msb.se" target=”_blank” class="mt-3 btn btn-dark">Läs mer</a>
+          </p>
+          <br>
+          <img src="static/msb.webp" class="mt-3 img-fluid" alt="Placeholder Image">
         </div>
       </div>
 
@@ -74,8 +74,10 @@
               Ring <span style="color: red;">113 13</span> för information om olyckor och kriser. <br>
               Ring <span style="color: red;">114 14</span> för icke akuta polisärenden. <br>
               Ring <span style="color: red;">1177</span> för sjukvårdsrådgivning.
-              <a href="https://www.sosalarm.se" class="btn btn-dark">Läs mer</a> <br>
-              <img src="static/zoz.png" class="img-fluid" alt="Placeholder Image">
+              <br>
+              <a href="https://www.sosalarm.se" target=”_blank” class="mt-3 btn btn-dark">Läs mer</a>
+              <br>
+              <img src="static/zoz.png" class="mt-3 img-fluid" alt="Placeholder Image">
             </p>
           </div>
         </div>
@@ -89,8 +91,9 @@
               Myndigheten verkar för en god folkhälsa och arbetar för att befolkningen ska ha ett skydd mot smittsamma
               sjukdomar och andra hälsohot.
               <span style="color: red;">Telefon till växeln: 010-205 20 00 </span><br>
-              <a href="https://www.folkhalsomyndigheten.se" class="btn btn-dark">Läs mer</a>
-              <img src="static/folkmy.png" class="img-fluid" alt="Placeholder Image">
+              <a href="https://www.folkhalsomyndigheten.se" class="mt-3 btn btn-dark">Läs mer</a>
+              <br>
+              <img src="static/folkmy.png" class="mt-3 img-fluid" alt="Placeholder Image">
             </p>
           </div>
         </div>
@@ -104,8 +107,10 @@
               påverka
               vägar och andra typer av begränsningar och risker för dig. För information angående Malmö Stad så kan du
               läsa mer här! För andra kommuner rekomenderas de officella kommunernas webbsidor.
-              <a href="https://www.malmo.se" class="btn btn-dark">Läs mer</a>
-              <img src="static/kommun.png" class="img-fluid" alt="Placeholder Image">
+              <br>
+              <a href="https://www.malmo.se" target=”_blank” class="mt-3 btn btn-dark">Läs mer</a>
+              <br>
+              <img src="static/kommun.png" class="mt-3 img-fluid" alt="Placeholder Image">
             </p>
           </div>
         </div>
