Get pic and pic text from DB

--- a/templates/index.html
+++ b/templates/index.html
@@ -206,9 +206,9 @@
                                         </button>
                                     </span>
                                 </div>
-
-                                <img class="img-thumbnail rounded-circle icon-post" src="https://picsum.photos/200/300"
-                                    alt="">
+                                
+                                <img class="img-thumbnail rounded-circle icon-post" src="{{article[5]}}"
+                                    alt="{{article[6]}}">
                             </div>
                         </div>
                     </div>
