User_email is shown in profile

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -47,8 +47,9 @@
     <main class="container-md">
         <div id="profilepage">
             <h2 id="phead">Min profil</h2>
+
             <label for="email" class="formhead">E-post</label>
-            <input class="form-control" type="email" id="email" name="Email">
+            <input disabled class="form-control" type="email" id="email" name="Email" value="{{user_email[0]}}">
 
             <label for="postnummer" class="formhead">Postnummer</label>
             <input class="form-control" type="text" id="zipcode" name="Postnummer">
