--- a/templates/profile.html
+++ b/templates/profile.html
@@ -49,7 +49,9 @@
             <h2 id="phead">Min profil</h2>
 
             <label for="email" class="formhead">E-post</label>
-            <input disabled class="form-control" type="email" id="email" name="Email" value="{{user_information[0]}}">
+            {%for information in user_information%}
+            <input disabled class="form-control" type="email" id="email" name="Email" value="{{information[0]}}">
+            {%endfor%}
 
             <label for="postnummer" class="formhead">Postnummer</label>
             <input class="form-control" type="text" id="zipcode" name="Postnummer">
