--- a/templates/profile.html
+++ b/templates/profile.html
@@ -63,8 +63,11 @@
 
             <h2 id="phead" class="mt-4">Mina inlägg</h2>
             <ul class="profilefont">
+                
                 {%for information in user_information%}
-                <li>{{information[1]}} - {{information[2]}} - {{information[3]}}</li>
+                    {% if information[1] != None and information[2] != None and information[3] != None %}
+                    <li>{{information[1]}} - {{information[2]}} - {{information[3]}}</li>
+                    {%endif%}
                 {%endfor%}
             </ul>
 
