--- a/templates/login.html
+++ b/templates/login.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="../static/stylesheet.css">
     <!--BootsratpIcons-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <!--Font Awesome pil-ikon för dropdown menu-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 
