--- a/templates/polisen_api.html
+++ b/templates/polisen_api.html
@@ -11,6 +11,8 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../static/stylesheet.css">
     <script src="../static/polisen_api.js"></script>
+    <!--Font Awesome pil-ikon för dropdown menu-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 
@@ -27,20 +29,24 @@
     <!--NavBar-->
     <nav class="navbar">
         <ul>
-            <li><a href="/">Hem</a></li>
-            <li><a href="/Krishantering">Krishantering</a></li>
-            <li><a href="/Kontakt">Kontakta oss</a></li>
+            <li id="dropmenu">Meny<i class="fa fa-caret-down"></i>
+                <ul class="dropdown-content">
+                    <li><a href="/">Hem</a></li>
+                    <li><a href="/Krishantering">Krishantering</a></li>
+                    <li><a href="/Kontakt">Kontakta oss</a></li>
 
-            <!--Inloggad användare-->
-            {% if is_logged_in != None %}
-            <li><a href="/Ny">Publicera inlägg</a></li>
-            <li><a href="/Profil" id="profilebtn">Min profil</a></li>
+                    <!--Inloggad användare-->
+                    {% if is_logged_in != None %}
+                    <li><a href="/Ny">Publicera inlägg</a></li>
+                    <li><a href="/Profil" id="profilebtn">Min profil</a></li>
 
-            <!--Inte inloggad användare-->
-            {% else %}
-            <li><a href="/Logga_in" id="loginbtn">Logga in</a></li>
-            <li><a href="/Registrering" id="regbtn">Gå med</a></li>
-            {% endif %}
+                    <!--Inte inloggad användare-->
+                    {% else %}
+                    <li><a href="/Logga_in" id="loginbtn">Logga in</a></li>
+                    <li><a href="/Registrering" id="regbtn">Gå med</a></li>
+                    {% endif %}
+                </ul>
+            </li>
         </ul>
     </nav>
 
