--- a/templates/login.html
+++ b/templates/login.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="../static/stylesheet.css">
     <!--BootsratpIcons-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <!--Font Awesome pil-ikon för dropdown menu-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 
@@ -28,20 +30,24 @@
     <!--NavBar-->
     <nav class="navbar">
         <ul>
-            <li><a href="/">Hem</a></li>
-            <li><a href="/Krishantering">Krishantering</a></li>
-            <li><a href="/Kontakt">Kontakta oss</a></li>
+            <li id="dropmenu">Meny<i class="fa fa-caret-down"></i>
+                <ul class="dropdown-content">
+                    <li><a href="/">Hem</a></li>
+                    <li><a href="/Krishantering">Krishantering</a></li>
+                    <li><a href="/Kontakt">Kontakta oss</a></li>
 
-            <!--Inloggad användare-->
-            {% if is_logged_in != None %}
-            <li><a href="/Ny">Publicera inlägg</a></li>
-            <li><a href="/Profil" id="profilebtn">Min profil</a></li>
+                    <!--Inloggad användare-->
+                    {% if is_logged_in != None %}
+                    <li><a href="/Ny">Publicera inlägg</a></li>
+                    <li><a href="/Profil" id="profilebtn">Min profil</a></li>
 
-            <!--Inte inloggad användare-->
-            {% else %}
-            <li><a href="/Logga_in" id="loginbtn">Logga in</a></li>
-            <li><a href="/Registrering" id="regbtn">Gå med</a></li>
-            {% endif %}
+                    <!--Inte inloggad användare-->
+                    {% else %}
+                    <li><a href="/Logga_in" id="loginbtn">Logga in</a></li>
+                    <li><a href="/Registrering" id="regbtn">Gå med</a></li>
+                    {% endif %}
+                </ul>
+            </li>
         </ul>
     </nav>
 
