--- a/templates/index.html
+++ b/templates/index.html
@@ -64,7 +64,7 @@
                 </p>
                 <div class="collapse" id="collapseFilter">
                     <div>
-                        <form action="/filter" method="GET" class="mb-3" accept-charset="UTF-8">
+                        <form action="/filter_kriskoll" method="GET" class="mb-3" accept-charset="UTF-8">
 
                             <!--Categories-->
                             <label class="d-flex justify-content-center text-center form-label" for="category">
